# DSA

./: .env  .env.example  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  CNAME  LICENSE  README.md  components.json  eslint.config.js  index.css  index.html  package-lock.json  package.json  search.js  sort.js  tailwind.config.ts  test.html  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.github/workflows/: ci.yml
DSA/: DSA.sln
DSA/DSA/: DSA.vcxproj  DSA.vcxproj.filters  Graph.cpp  Graph.h  HeaderFile.h  Mouse.cpp  Search.cpp  SelectionScreen.cpp  SelectionScreen.h  ShortestPath.cpp  ShortestPath.h  Sort.cpp  Sort.h  Source.cpp  data.h  linkedlist.cpp  linkedlist.h
DSA/DSA/Debug/: DSA.exe.recipe  vc142.idb
DSA/src/: HeaderFile.h  Search.h  linkedlist.h
DSA/x64/Debug/: DSA.ilk
DSA/x64/Release/: DSA.iobj  DSA.ipdb
archive/: index.css  index.html  leader-line.min.js  linear-ds.js  sort.js
archive/src/: ElementArray.js  createInputField.js  search.js  sortingAlgorithms.js
public/: 404.html  CNAME
src/: .prettierrc  App.tsx  ElementArray.js  Graph.cpp  Graph.h  HeaderFile.h  ShortestPath.h  Sort.cpp  data.cpp  index.css  main.js  main.tsx  routes.tsx  vite-env.d.ts
src/algorithms/: algorithmsSection.tsx
src/algorithms/components/: AlgorithmInfo.tsx  ControlPanel.tsx  GraphAlgorithmControls.tsx  GraphCanvas.tsx  GraphEditor.tsx  GraphPathFindingStepDisplay.tsx  algorithmControls.tsx  graphCanvas.tsx  graphEditor.tsx  redirectHandler.tsx  sortingControls.tsx  stepDisplay.tsx
src/algorithms/config/: routeConfig.ts
src/algorithms/hooks/: useArray.ts  useGraph.ts  useGraphManipulation.ts  usePlayback.ts  (+4 more)
src/components/: mode-toggle.tsx  theme-provider.tsx
src/config/: algorithm-config.ts  common-problem-config.ts  data-structure-config.ts  data.ts  feature-config.ts  footer-config.ts  paths.ts  theme_context.ts  theme_provider.tsx
src/content/: privacy.md  tos.md
src/context/: about.md  data.ts  footer_config.ts  iconmap.ts  types.ts
src/data-structures/: avl-tree.ts  binary-tree.ts  graph-ds.ts  hash-table.ts  linked-list.ts  queue.ts  stack.ts
src/hooks/: use-array.ts  use-binary-tree.ts  use-debounce.ts  use-graph-ds.ts  use-graph-engine.ts  use-graph-manipulation.ts  use-graph.ts  use-hash-table.ts  use-linked-list.tsx  use-mst-visualization.ts  use-pathfinding-visualization.ts  use-playback.ts  use-problem-player.ts  use-queue.ts  use-scc-visualization.ts  use-search-visualization.ts  use-searching-engine.ts  use-sort-visualization.ts  use-sorting-engine.ts  use-stack.ts  use-string-matching-engine.ts  use-string-matching-visualization.ts  useSORTvisualizations.ts
src/lib/: circular-linked-list.ts  doubly-linked-list.ts  node.ts  singly-linked-list.ts
src/pages/: Layout.tsx  Markdown.tsx  about.tsx  circular-linked-list.tsx  comparison-sort.tsx  doubly-linked-list.tsx  home.tsx  linked-list.tsx  login.tsx  not-found.tsx  private-route.tsx  queue.tsx  router-error.tsx  search-results.tsx  search.tsx  signup.tsx  singly-linked-list.tsx  stack.tsx
src/routes/: algorithmRoutes.tsx  config.tsx  index.tsx  routeConfig.tsx
src/styles/: index.css
src/test/: setup.test.ts  setup.ts
src/types/: array-element.ts  interfaces.ts  sorting.ts  types.ts
src/utils/: LinkedListNode.ts  comparison-sorts.ts  helpers.ts  iconmap.ts  sorting-utils.ts  stack.ts  types.ts
(+297 files in other folders)
